--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <div class="container">
             <canvas id="canvas"></canvas>
         </div>
-        <script type="module" src="./src/index.ts"></script>
+        <script type="module" src="./index.ts"></script>
     </body>
 </html>
