examples, automatic layout of vertex buffers, cleanup

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>WebGPU</title>
-        <link rel="stylesheet" href="./style.css">
-    </head>
-    <body>
-        <div class="container">
-            <canvas id="canvas"></canvas>
-        </div>
-        <script type="module" src="./index.ts"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebGPU - Examples</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <p>Examples</p>
+    <ul>
+        <li><a href="examples/clear-color/">Basic / Clear color</a></li>
+        <li><a href="examples/full-screen-quad/">Basic / Full-screen quad with texture</a></li>
+    </ul>
+</body>
+
 </html>
