--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="examples/clear-color/">Basic / Clear color</a></li>
         <li><a href="examples/full-screen-quad/">Basic / Full-screen quad with texture</a></li>
+        <li><a href="examples/vertex-colors/">Basic / Vertex colors</a></li>
     </ul>
 </body>
 
