--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <p>Examples</p>
     <ul>
-        <li><a href="examples/clear-color/">Basic / Clear color</a></li>
-        <li><a href="examples/full-screen-quad/">Basic / Full-screen quad with texture</a></li>
-        <li><a href="examples/vertex-colors/">Basic / Vertex colors</a></li>
+        <li><a href="examples/basic/clear-color/">Basic / Clear color</a></li>
+        <li><a href="examples/basic/full-screen-quad/">Basic / Full-screen quad with texture</a></li>
+        <li><a href="examples/basic/vertex-colors/">Basic / Vertex colors</a></li>
+
+        <li><a href="examples/effects/colorimetry/">Effects / Colorimetry</a></li>
     </ul>
 </body>
 
