--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="examples/basic/vertex-colors/">Basic / Vertex colors</a></li>
 
         <li><a href="examples/effects/colorimetry/">Effects / Colorimetry</a></li>
+        <li><a href="examples/effects/flip/">Effects / Flip</a></li>
     </ul>
 </body>
 
