state of Object3D and Material

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="examples/basic/clear-color/">Basic / Clear color</a></li>
         <li><a href="examples/basic/full-screen-quad/">Basic / Full-screen quad with texture</a></li>
         <li><a href="examples/basic/vertex-colors/">Basic / Vertex colors</a></li>
+        <li><a href="examples/basic/active-inactive/">Basic / Active / Inactive objects</a></li>
 
         <li><a href="examples/effects/colorimetry/">Effects / Colorimetry</a></li>
         <li><a href="examples/effects/flip/">Effects / Flip</a></li>
