--- a/examples/basic/active-inactive/index.html
+++ b/examples/basic/active-inactive/index.html
@@ -40,16 +40,16 @@
             <div class="gui">
                 <div class="card">
                     <fieldset class="container m-1" id="options">
-                        <label for="toggle-active" class="form-label">Activate object</label>
-                        <div class="input-group">
-                            <input type="checkbox" checked class="checkbox" id="toggle-active">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" checked type="checkbox" id="toggle-active">
+                            <label class="form-check-label" for="toggle-active" role="switch">Object</label>
                         </div>
 
                         <div class="my-2"></div>
 
-                        <label for="toggle-active-material" class="form-label">Activate material</label>
-                        <div class="input-group">
-                            <input type="checkbox" checked class="checkbox" id="toggle-active-material">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" checked type="checkbox" id="toggle-active-material">
+                            <label class="form-check-label" for="toggle-active-material" role="switch">Material</label>
                         </div>
                     </fieldset>
                 </div>
