--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body style="padding: 2rem;">
     <p>Examples</p>
     <ul>
         <li><a href="examples/basic/clear-color/">Basic / Clear color</a></li>
