--- a/examples/basic/vertex-colors/index.html
+++ b/examples/basic/vertex-colors/index.html
@@ -4,24 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vertex colors</title>
-        <style>
-            .container {
-                background-color: cyan;
-                width: 100%;
-                height: 100vh;
-            }
-
-            body {
-                margin: 0;
-                padding: 0;
-            }
-
-            #canvas {
-                margin: 0;
-                width: 100%;
-                height: 100%;
-            }
-        </style>
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <div class="container">
