--- a/examples/effects/flip/index.html
+++ b/examples/effects/flip/index.html
@@ -4,33 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Effects / Flip</title>
-        <style>
-            .container {
-                width: 100%;
-            }
-
-            body {
-                margin: 0;
-                padding: 0;
-            }
-
-            .gui {
-                padding: 0.5rem;
-                position: absolute;
-                top: 0%;
-                right: 0%;
-                margin: 0;
-            }
-
-            #canvas {
-                position: absolute;
-                top: 0%;
-                left: 0%;
-                margin: 0;
-                width: 100%;
-                height: 100%;
-            }
-        </style>
+        <link rel="stylesheet" href="/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </head>
@@ -40,16 +14,16 @@
             <div class="gui">
                 <div class="card">
                     <fieldset class="container m-1" id="options">
-                        <label for="toggle-flip-x" class="form-label">Flip X</label>
-                        <div class="input-group">
-                            <input type="checkbox" class="checkbox" id="toggle-flip-x">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="toggle-flip-x">
+                            <label class="form-check-label" for="toggle-flip-x" role="switch">Flip X</label>
                         </div>
 
                         <div class="my-2"></div>
 
-                        <label for="toggle-flip-y" class="form-label">Flip Y</label>
-                        <div class="input-group">
-                            <input type="checkbox" class="checkbox" id="toggle-flip-y">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="toggle-flip-y">
+                            <label class="form-check-label" for="toggle-flip-y" role="switch">Flip Y</label>
                         </div>
                     </fieldset>
                 </div>
