--- a/examples/basic/active-inactive/index.html
+++ b/examples/basic/active-inactive/index.html
@@ -4,37 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Object3D active state</title>
-        <style>
-            .container {
-                width: 100%;
-            }
-
-            body {
-                margin: 0;
-                padding: 0;
-            }
-
-            .gui {
-                padding: 0.5rem;
-                position: absolute;
-                top: 0%;
-                right: 0%;
-                margin: 0;
-            }
-
-            #canvas {
-                position: absolute;
-                top: 0%;
-                left: 0%;
-                margin: 0;
-                width: 100%;
-                height: 100%;
-            }
-        </style>
+        <link rel="stylesheet" href="/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body data-bs-theme="dark">
         <div class="container">
             <canvas id="canvas"></canvas>
             <div class="gui">
