start matrix transformations

--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
 <body style="padding: 2rem;" data-bs-theme="dark">
     <p>Examples</p>
     <ul>
-        <li><a href="examples/basic/clear-color/">Basic / Clear color</a></li>
-        <li><a href="examples/basic/full-screen-quad/">Basic / Full-screen quad with texture</a></li>
-        <li><a href="examples/basic/vertex-colors/">Basic / Vertex colors</a></li>
-        <li><a href="examples/basic/active-inactive/">Basic / Active / Inactive objects</a></li>
-
-        <li><a href="examples/effects/colorimetry/">Effects / Colorimetry</a></li>
-        <li><a href="examples/effects/flip/">Effects / Flip</a></li>
+        <li>
+            <p>Basic</p>
+            <ul>
+                <li><a href="examples/basic/clear-color/">Clear color</a></li>
+                <li><a href="examples/basic/full-screen-quad/">Full-screen quad with texture</a></li>
+                <li><a href="examples/basic/vertex-colors/">Vertex colors</a></li>
+                <li><a href="examples/basic/active-inactive/">Active / Inactive objects</a></li>
+            </ul>
+        </li>
+        <br>
+        <li>
+            <p>Effects</p>
+            <ul>
+                <li><a href="examples/effects/colorimetry/">Colorimetry</a></li>
+                <li><a href="examples/effects/flip/">Flip</a></li>
+            </ul>
+        </li>
     </ul>
 </body>
 
