model/view/projection transformation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="examples/basic/full-screen-quad/">Full-screen quad with texture</a></li>
                 <li><a href="examples/basic/vertex-colors/">Vertex colors</a></li>
                 <li><a href="examples/basic/active-inactive/">Active / Inactive objects</a></li>
+                <li><a href="examples/basic/pyramid/">Pyramid</a></li>
             </ul>
         </li>
         <br>
