scene graph transformations

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="examples/basic/vertex-colors/">Vertex colors</a></li>
                 <li><a href="examples/basic/active-inactive/">Active / Inactive objects</a></li>
                 <li><a href="examples/basic/pyramid/">Pyramid</a></li>
+                <li><a href="examples/basic/scene-graph/">Scene graph</a></li>
             </ul>
         </li>
         <br>
