--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul>
                 <li><a href="examples/basic/clear-color/">Clear color</a></li>
                 <li><a href="examples/basic/full-screen-quad/">Full-screen quad with texture</a></li>
+                <li><a href="examples/basic/transparent-texture/">Full-screen quad with a transparent texture</a></li>
                 <li><a href="examples/basic/vertex-colors/">Vertex colors</a></li>
                 <li><a href="examples/basic/active-inactive/">Active / Inactive objects</a></li>
                 <li><a href="examples/basic/pyramid/">Pyramid</a></li>
