basic loaders (PLY, OBJ)

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                 <li><a href="examples/effects/flip/">Flip</a></li>
             </ul>
         </li>
+        <br>
+        <li>
+            <p>Loaders</p>
+            <ul>
+                <li><a href="examples/formats/obj/teapot/">OBJ</a></li>
+                <li><a href="examples/formats/ply/">PLY</a></li>
+            </ul>
+        </li>
     </ul>
 </body>
 
