material: compute layout for each instance

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="examples/basic/active-inactive/">Active / Inactive objects</a></li>
                 <li><a href="examples/basic/pyramid/">Pyramid</a></li>
                 <li><a href="examples/basic/scene-graph/">Scene graph</a></li>
+                <li><a href="examples/basic/mode-points/">Point rendering</a></li>
             </ul>
         </li>
         <br>
@@ -34,12 +35,6 @@
             </ul>
         </li>
         <br>
-        <li>
-            <p>Loaders</p>
-            <ul>
-                <li><a href="examples/formats/ply/">PLY</a></li>
-            </ul>
-        </li>
     </ul>
 </body>
 
