--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="examples/basic/pyramid/">Pyramid</a></li>
                 <li><a href="examples/basic/scene-graph/">Scene graph</a></li>
                 <li><a href="examples/basic/mode-points/">Point rendering</a></li>
+                <li><a href="examples/basic/mode-lines/">Line rendering</a></li>
             </ul>
         </li>
         <br>
