--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="examples/basic/scene-graph/">Scene graph</a></li>
                 <li><a href="examples/basic/mode-points/">Point rendering</a></li>
                 <li><a href="examples/basic/mode-lines/">Line rendering</a></li>
+                <li><a href="examples/basic/solid+lines/">Solid + wireframe mesh</a></li>
             </ul>
         </li>
         <br>
