--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
                 <li><a href="examples/basic/transparent-texture/">Full-screen quad with a transparent texture</a></li>
                 <li><a href="examples/basic/vertex-colors/">Vertex colors</a></li>
                 <li><a href="examples/basic/active-inactive/">Active / Inactive objects</a></li>
-                <li><a href="examples/basic/pyramid/">Pyramid</a></li>
-                <li><a href="examples/basic/scene-graph/">Scene graph</a></li>
                 <li><a href="examples/basic/mode-points/">Point rendering</a></li>
                 <li><a href="examples/basic/mode-lines/">Line rendering</a></li>
                 <li><a href="examples/basic/solid+lines/">Solid + wireframe mesh</a></li>
+                <li><a href="examples/basic/scene-graph/">Scene graph</a></li>
+                <li><a href="examples/basic/dynamic-geometry/">Dynamic geometry</a></li>
+            </ul>
+        </li>
+        <br>
+        <li>
+            <p>Geometries</p>
+            <ul>
+                <li><a href="examples/geometries/tetrahedron/">Tetrahedron</a></li>
+                <li><a href="examples/geometries/box/">Box</a></li>
             </ul>
         </li>
         <br>
