--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>Geometries</p>
             <ul>
                 <li><a href="examples/geometries/tetrahedron/">Tetrahedron</a></li>
-                <li><a href="examples/geometries/box/">Box</a></li>
+                <li><a href="examples/geometries/cube/">Cube</a></li>
             </ul>
         </li>
         <br>
