Object3D: AABB computation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="examples/basic/solid+lines/">Solid + wireframe mesh</a></li>
                 <li><a href="examples/basic/scene-graph/">Scene graph</a></li>
                 <li><a href="examples/basic/dynamic-geometry/">Dynamic geometry</a></li>
+                <li><a href="examples/basic/bounds/">Bounds</a></li>
             </ul>
         </li>
         <br>
