--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="examples/basic/scene-graph/">Scene graph</a></li>
                 <li><a href="examples/basic/dynamic-geometry/">Dynamic geometry</a></li>
                 <li><a href="examples/basic/bounds/">Bounds</a></li>
+                <li><a href="examples/basic/frustum-culling/">Frustum culling</a></li>
             </ul>
         </li>
         <br>
