Geometries: add Quad and WireQuad

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <ul>
                 <li><a href="examples/geometries/tetrahedron/">Tetrahedron</a></li>
                 <li><a href="examples/geometries/cube/">Cube</a></li>
+                <li><a href="examples/geometries/quad/">Quad</a></li>
             </ul>
         </li>
         <br>
