use import aliases + replace jest by vitest

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="examples/basic/dynamic-geometry/">Dynamic geometry</a></li>
                 <li><a href="examples/basic/bounds/">Bounds</a></li>
                 <li><a href="examples/basic/frustum-culling/">Frustum culling</a></li>
+                <li><a href="examples/basic/alpha-blending/">Alpha blending</a></li>
             </ul>
         </li>
         <br>
