use tweakpane for example GUI

--- a/examples/basic/scene-graph/index.html
+++ b/examples/basic/scene-graph/index.html
@@ -5,16 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Basic / Scenegraph</title>
         <link rel="stylesheet" href="/style.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container">
             <canvas id="canvas"></canvas>
             <div class="attributions">
-                <p class="text-light text-center">
-                    Hammerhead model courtesy of <a href="https://people.sc.fsu.edu/~jburkardt/data/ply/ply.html" target="_blank">John Burkardt</a>
-                </p>
+                <p>Hammerhead model courtesy of <a href="https://people.sc.fsu.edu/~jburkardt/data/ply/ply.html" target="_blank">John Burkardt</a></p>
             </div>
         </div>
         <script type="module" src="./index.ts"></script>
