add glTF example

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             </ul>
         </li>
         <br>
+        <li>
+            <p>Formats</p>
+            <ul>
+                <li><a href="examples/formats/gltf-helmet/" >glTF helmet</a></li>
+            </ul>
+        </li>
+        <br>
     </ul>
 </body>
 
