--- a/examples/basic/active-inactive/index.html
+++ b/examples/basic/active-inactive/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Object3D active state</title>
+        <title>Node active state</title>
         <link rel="stylesheet" href="/style.css">
     </head>
     <body data-bs-theme="dark">
