--- a/index.html
+++ b/index.html
@@ -5,62 +5,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebGPU - Examples</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </head>
 
-<body class="p-2" data-bs-theme="dark">
+<body style="padding: 2rem;" data-bs-theme="dark">
     <p>Examples</p>
     <ul>
         <li>
             <p>Basic</p>
             <ul>
-                <li><a href="#" onclick="runExample('./basic/clear-color')">Clear color</a></li>
-                <li><a href="#" onclick="runExample('./basic/full-screen-quad')">Full-screen quad</a></li>
-                <li><a href="#" onclick="runExample('./basic/transparent-texture')">Full-screen quad (transparent)</a></li>
-                <li><a href="#" onclick="runExample('./basic/vertex-colors')">Vertex colors</a></li>
-                <li><a href="#" onclick="runExample('./basic/active-inactive')">Active / Inactive objects</a></li>
-                <li><a href="#" onclick="runExample('./basic/mode-points')">Point rendering</a></li>
-                <li><a href="#" onclick="runExample('./basic/mode-lines')">Line rendering</a></li>
-                <li><a href="#" onclick="runExample('./basic/solid+lines')">Solid + wireframe mesh</a></li>
-                <li><a href="#" onclick="runExample('./basic/scene-graph')">Scene graph</a></li>
-                <li><a href="#" onclick="runExample('./basic/dynamic-geometry')">Dynamic geometry</a></li>
-                <li><a href="#" onclick="runExample('./basic/bounds')">Bounds</a></li>
-                <li><a href="#" onclick="runExample('./basic/frustum-culling')">Frustum culling</a></li>
-                <li><a href="#" onclick="runExample('./basic/alpha-blending')">Alpha blending</a></li>
+                <li><a href="examples/basic/clear-color/">Clear color</a></li>
+                <li><a href="examples/basic/full-screen-quad/">Full-screen quad with texture</a></li>
+                <li><a href="examples/basic/transparent-texture/">Full-screen quad with a transparent texture</a></li>
+                <li><a href="examples/basic/vertex-colors/">Vertex colors</a></li>
+                <li><a href="examples/basic/active-inactive/">Active / Inactive objects</a></li>
+                <li><a href="examples/basic/mode-points/">Point rendering</a></li>
+                <li><a href="examples/basic/mode-lines/">Line rendering</a></li>
+                <li><a href="examples/basic/solid+lines/">Solid + wireframe mesh</a></li>
+                <li><a href="examples/basic/scene-graph/">Scene graph</a></li>
+                <li><a href="examples/basic/dynamic-geometry/">Dynamic geometry</a></li>
+                <li><a href="examples/basic/bounds/">Bounds</a></li>
+                <li><a href="examples/basic/frustum-culling/">Frustum culling</a></li>
+                <li><a href="examples/basic/alpha-blending/">Alpha blending</a></li>
             </ul>
         </li>
         <br>
         <li>
             <p>Geometries</p>
             <ul>
-                <li><a href="#" onclick="runExample('./geometries/tetrahedron')">Tetrahedron</a></li>
-                <li><a href="#" onclick="runExample('./geometries/cube')">Cube</a></li>
-                <li><a href="#" onclick="runExample('./geometries/quad')">Quad</a></li>
+                <li><a href="examples/geometries/tetrahedron/">Tetrahedron</a></li>
+                <li><a href="examples/geometries/cube/">Cube</a></li>
+                <li><a href="examples/geometries/quad/">Quad</a></li>
             </ul>
         </li>
         <br>
         <li>
             <p>Effects</p>
             <ul>
-                <li><a href="#" onclick="runExample('./effects/colorimetry')">Colorimetry</a></li>
-                <li><a href="#" onclick="runExample('./effects/flip')">Flip</a></li>
+                <li><a href="examples/effects/colorimetry/">Colorimetry</a></li>
+                <li><a href="examples/effects/flip/">Flip</a></li>
             </ul>
         </li>
         <br>
         <li>
             <p>Formats</p>
             <ul>
-                <li><a href="#" onclick="runExample('./formats/gltf-helmet')" >glTF helmet</a></li>
+                <li><a href="examples/formats/gltf-helmet/" >glTF helmet</a></li>
             </ul>
         </li>
         <br>
     </ul>
-    <div id="view">
-        <canvas class="border h-100 w-100" id="canvas"></canvas>
-    </div>
-    <script type="module" src="./examples/main.ts"></script>
 </body>
 
 </html>
