fix relative paths

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,43 +16,43 @@
         <li>
             <p>Basic</p>
             <ul>
-                <li><a href="/basic/clear-color/">Clear color</a></li>
-                <li><a href="/basic/full-screen-quad/">Full-screen quad with texture</a></li>
-                <li><a href="/basic/transparent-texture/">Full-screen quad with a transparent texture</a></li>
-                <li><a href="/basic/vertex-colors/">Vertex colors</a></li>
-                <li><a href="/basic/active-inactive/">Active / Inactive objects</a></li>
-                <li><a href="/basic/mode-points/">Point rendering</a></li>
-                <li><a href="/basic/mode-lines/">Line rendering</a></li>
-                <li><a href="/basic/solid+lines/">Solid + wireframe mesh</a></li>
-                <li><a href="/basic/scene-graph/">Scene graph</a></li>
-                <li><a href="/basic/dynamic-geometry/">Dynamic geometry</a></li>
-                <li><a href="/basic/bounds/">Bounds</a></li>
-                <li><a href="/basic/frustum-culling/">Frustum culling</a></li>
-                <li><a href="/basic/alpha-blending/">Alpha blending</a></li>
+                <li><a href="./basic/clear-color/">Clear color</a></li>
+                <li><a href="./basic/full-screen-quad/">Full-screen quad with texture</a></li>
+                <li><a href="./basic/transparent-texture/">Full-screen quad with a transparent texture</a></li>
+                <li><a href="./basic/vertex-colors/">Vertex colors</a></li>
+                <li><a href="./basic/active-inactive/">Active / Inactive objects</a></li>
+                <li><a href="./basic/mode-points/">Point rendering</a></li>
+                <li><a href="./basic/mode-lines/">Line rendering</a></li>
+                <li><a href="./basic/solid+lines/">Solid + wireframe mesh</a></li>
+                <li><a href="./basic/scene-graph/">Scene graph</a></li>
+                <li><a href="./basic/dynamic-geometry/">Dynamic geometry</a></li>
+                <li><a href="./basic/bounds/">Bounds</a></li>
+                <li><a href="./basic/frustum-culling/">Frustum culling</a></li>
+                <li><a href="./basic/alpha-blending/">Alpha blending</a></li>
             </ul>
         </li>
         <br>
         <li>
             <p>Geometries</p>
             <ul>
-                <li><a href="/geometries/tetrahedron/">Tetrahedron</a></li>
-                <li><a href="/geometries/cube/">Cube</a></li>
-                <li><a href="/geometries/quad/">Quad</a></li>
+                <li><a href="./geometries/tetrahedron/">Tetrahedron</a></li>
+                <li><a href="./geometries/cube/">Cube</a></li>
+                <li><a href="./geometries/quad/">Quad</a></li>
             </ul>
         </li>
         <br>
         <li>
             <p>Effects</p>
             <ul>
-                <li><a href="/effects/colorimetry/">Colorimetry</a></li>
-                <li><a href="/effects/flip/">Flip</a></li>
+                <li><a href="./effects/colorimetry/">Colorimetry</a></li>
+                <li><a href="./effects/flip/">Flip</a></li>
             </ul>
         </li>
         <br>
         <li>
             <p>Formats</p>
             <ul>
-                <li><a href="/formats/gltf-helmet/" >glTF helmet</a></li>
+                <li><a href="./formats/gltf-helmet/" >glTF helmet</a></li>
             </ul>
         </li>
         <br>
